# fast-silero-vad

./: .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  duration_sweep.py  plot_benchmark.py  utils.py
benchmarks/cpp/: benchmark.cc  build.py
src/fast_silero_vad/: __init__.py  constants.py  detect.py  utils.py  vad.py
src/fast_silero_vad/benchmark/: __init__.py
src/fast_silero_vad/custom_op/: __init__.py  build_vad_custom_op.py  vad_frontend.cc
src/fast_silero_vad/engine/: __init__.py  engine.py
src/fast_silero_vad/export/: __init__.py  export_vad_onnx.py  package_model.py
src/fast_silero_vad/export/custom_op/: build_vad_custom_op.py
src/fast_silero_vad/export/model/: __init__.py  vad_model.py
src/fast_silero_vad/licenses/: NOTICE
src/fast_silero_vad/model/: vad.py
src/fast_silero_vad/segmenter/: __init__.py  segmenter.py
tests/: conftest.py  test_custom_op.py  test_detect.py  test_engine.py  test_export_equivalence.py  test_segmenter.py  test_vad.py  test_validation.py
