[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-silero-vad"
version = "0.1.0"
description = "CPU-optimized Silero-compatible VAD runtime and exporter."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [{ name = "SoundsGoodAI" }]
keywords = ["audio", "onnxruntime", "silero", "vad", "voice-activity-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "numba>=0.65.0,<1.0.0",
    "numpy>=2.0.0,<3.0.0",
    "omegaconf>=2.3.1,<3.0.0",
    "onnxruntime>=1.27.0,<2.0.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.22.0,<2.0.0",
    "silero-vad>=6.2",
    "torch>=2.13.0,<3.0.0",
]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "ruff>=0.15.0,<1.0.0",
]
plot = [
    "kaleido>=1.3.0,<2.0.0",
    "plotly>=6.9.0,<7.0.0",
]

[project.scripts]
fast-silero-vad = "fast_silero_vad.detect:main"
fast-silero-vad-export = "fast_silero_vad.export.package_model:main_cli"
fast-silero-vad-benchmark = "fast_silero_vad.benchmark.benchmark:main"
fast-silero-vad-plot-benchmark = "fast_silero_vad.benchmark.plot_benchmark:main"

[project.urls]
Homepage = "https://github.com/SoundsGoodAI/fast-silero-vad"
Issues = "https://github.com/SoundsGoodAI/fast-silero-vad/issues"
Repository = "https://github.com/SoundsGoodAI/fast-silero-vad.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fast_silero_vad = [
    "export/custom_op/vad_frontend.cc",
    "licenses/APACHE-2.0.txt",
    "licenses/NOTICE",
    "licenses/SILERO-VAD-MIT.txt",
    "py.typed",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
